fixed bug in abstracttypemap