@@ -32,17 +32,24 @@ public class CollectionMethodsTest {
 
   @Test
   public void asList00() {
-    List<?> list = asList(null);
-    assertEquals(1, list.size());
-    assertEquals(null, list.get(0));
-    list = Arrays.asList("a", "b", null, "d");
-    assertSame(list, asList(list));
-    assertEquals(Arrays.asList("a", "b", null, "d"), asList(newLinkedHashSet("a", "b", null, "d")));
-    assertEquals(List.of(1, 2, 3, 4, 5), asList(new int[] {1, 2, 3, 4, 5}));
-    assertEquals(List.of((byte) 1, Byte.valueOf((byte) 2)), asList(new byte[] {1, 2}));
+    assertEquals(Collections.singletonList(null), asList(null));
     assertEquals(List.of("Hello World"), asList("Hello World"));
+    assertEquals(List.of("Hello", "World"), asList(new String[] {"Hello", "World"}));
     Object obj = new Object();
     assertEquals(Collections.singletonList(obj), asList(obj));
+    assertEquals(List.of(1, 2, 3, 4, 5), asList(new int[] {1, 2, 3, 4, 5}));
+    assertEquals(List.of(1D, 2D, 3D, 4D, 5D), asList(new double[] {1, 2, 3, 4, 5}));
+    assertEquals(List.of(1L, 2L, 3L, 4L, 5L), asList(new long[] {1, 2, 3, 4, 5}));
+    assertEquals(List.of(1F, 2F, 3F, 4F, 5F), asList(new float[] {1, 2, 3, 4, 5}));
+    assertEquals(List.of((short) 1, (short) 2, (short) 3), asList(new short[] {1, 2, 3}));
+    assertEquals(List.of((byte) 1, (byte) 2, (byte) 3), asList(new byte[] {1, 2, 3}));
+    assertEquals(List.of((char) 1, (char) 2, (char) 3), asList(new char[] {1, 2, 3}));
+    assertEquals(
+        List.of(Boolean.TRUE, Boolean.FALSE, Boolean.TRUE),
+        asList(new boolean[] {true, false, true}));
+    List l = new ArrayList();
+    l.add(10);
+    assertSame(l, asList(l));
   }
 
   @Test
